--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
             - DATABASE_PASSWORD=postgres
             - DATABASE_HOST=vdb
             - DATABASE_PORT=5432
-            # - CACHE_LOCATION=redis://vcache:6379
+            - CACHE_LOCATION=redis://vcache:6379/0
             - CACHE_HOST=vcache
             - CACHE_PORT=6379
             - CACHE_DB=0
@@ -32,6 +32,34 @@ services:
         depends_on:
             - vdb
             - vcache
+    volindo-worker:
+        container_name: volindo-worker
+        build: .
+        command: 'celery -A volindoapp worker -l INFO'
+        volumes:
+            - ./src/:/code
+        environment:
+            - DATABASE_NAME=vdb
+            - DATABASE_USER=postgres
+            - DATABASE_PASSWORD=postgres
+            - DATABASE_HOST=vdb
+            - DATABASE_PORT=5432
+            - CACHE_LOCATION=redis://vcache:6379/0
+            - CACHE_HOST=vcache
+            - CACHE_PORT=6379
+            - CACHE_DB=0
+            - DEBUG=True
+            - SECRET_KEY=vol-service-secret
+            - TIME_ZONE=America/Mexico_City
+            - ALLOWED_HOSTS=*
+            - TMX_HOST=http://test.services.travelomatix.com/webservices/index.php/hotel_v3/service/Search
+            - TMTX_USERNAME=test273344
+            - TMTX_DOMAINKEY=TMX5262731660138834
+            - TMTX_SYSTEM=test
+            - TMTX_PASSWORD=test@273
+        depends_on:
+            - vdb
+            - vcache
     vdb:
         container_name: vdb
         image: postgres:14
@@ -41,8 +69,6 @@ services:
             - POSTGRES_USER=postgres
             - POSTGRES_PASSWORD=postgres
             - POSTGRES_PORT=5432
-        # ports:
-        #     - '5432:5432'
         expose:
             - '5432'
         healthcheck:
@@ -54,6 +80,7 @@ services:
             - vdb:/var/lib/postgresql/data
     vcache:
         image: redis
+        container_name: vcache
         expose:
             - '6379'
         ports:
