--- a/src/catalogue/fixtures/catalogues.yaml
+++ b/src/catalogue/fixtures/catalogues.yaml
@@ -1,11 +1,17 @@
 - model: 'catalogue.Catalogue'
   fields:
-    id: '79ad56d1-f7c9-48de-b997-79724be2a59c'
+    id: 'a4c7e30b-8b4e-4b2e-9674-a8137a930383'
+    slug: 'user_status'
+    description: 'User status'
+
+- model: 'catalogue.Catalogue'
+  fields:
+    id: 'f1d1d7a8-bffe-4d2d-81d4-9d47a2b080ce'
     slug: 'countries'
     description: 'Countries'
 
 - model: 'catalogue.Catalogue'
   fields:
-    id: 'daaf8765-9fda-4b0f-84aa-604877bd19d9'
-    slug: 'hotel_amenities'
-    description: 'Hotel Amenities'
+    id: 'dc0ea1ae-aeae-4b9f-8052-eb5ff3f23e99'
+    slug: 'phone_country_codes'
+    description: 'Phone country codes'
