--- a/src/user/fixtures/users.yaml
+++ b/src/user/fixtures/users.yaml
@@ -1,6 +1,6 @@
 - model: 'user.User'
   fields:
     id: '759a75bb-26e3-410e-94b5-9138ebc2e47a'
-    user_status: '850e92dd-a12d-4c58-94ef-782ec4c4edc7'
+    user_status: '69e5e698-a900-4d14-a077-ba165f476a40' # validated_user
     updated_at: '2022-11-15'
     created_at: '2022-11-15'
