--- a/src/catalogue/fixtures/user_status.yaml
+++ b/src/catalogue/fixtures/user_status.yaml
@@ -3,7 +3,7 @@
     id: '69e5e698-a900-4d14-a077-ba165f476a40'
     catalogue_id: 'a4c7e30b-8b4e-4b2e-9674-a8137a930383'
     slug: 'user_validated'
-    description: 'User validated'
+    description: 'Validated'
     metadata:
 
 - model: 'catalogue.Item'
@@ -11,5 +11,5 @@
     id: '850e92dd-a12d-4c58-94ef-782ec4c4edc7'
     catalogue_id: 'a4c7e30b-8b4e-4b2e-9674-a8137a930383'
     slug: 'user_pending'
-    description: 'User pending for validation'
+    description: 'Pending for validation'
     metadata:
