UPDATE: admin interface

--- a/src/agent/fixtures/agents.yaml
+++ b/src/agent/fixtures/agents.yaml
@@ -7,7 +7,7 @@
     gender: 'M' # Male
     birthdate: '1970-01-01'
     country_id: 'f1d1d7a8-bffe-4d2d-81d4-9d47a2b080ce' # Mexico
-    phone_contry_code: '3c9efa4d-1b46-4e7c-b042-86f512f6dc8d' # Mexico +52
+    phone_country_code: '3c9efa4d-1b46-4e7c-b042-86f512f6dc8d' # Mexico +52
     phone_number: '5512345678'
     web_site: 'jhondoe.com'
     updated_at: '2022-11-15'
