--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,71 @@
-django-cors-headers
-django
-djangorestframework
-psycopg2-binary
-gunicorn
-pyyaml
-requests
-redis
-celery
-drf-yasg
-djangorestframework-simplejwt[crypto]
-gunicorn
+-i https://pypi.org/simple
+amqp==5.1.1 ; python_version >= '3.6'
+asgiref==3.5.2 ; python_version >= '3.7'
+async-timeout==4.0.2 ; python_version >= '3.6'
+attrs==22.1.0 ; python_version >= '3.5'
+awsebcli==3.20.3
+bcrypt==4.0.1 ; python_version >= '3.6'
+billiard==3.6.4.0
+blessed==1.19.1 ; python_version >= '2.7'
+botocore==1.23.54 ; python_version >= '3.6'
+cached-property==1.5.2
+celery==5.2.7
+cement==2.8.2
+certifi==2022.9.24 ; python_version >= '3.6'
+cffi==1.15.1
+charset-normalizer==2.0.12 ; python_version >= '3'
+click==8.1.3 ; python_version >= '3.7'
+click-didyoumean==0.3.0 ; python_full_version >= '3.6.2' and python_full_version < '4.0.0'
+click-plugins==1.1.1
+click-repl==0.2.0
+colorama==0.4.3 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==38.0.3
+django==4.1.3
+django-cors-headers==3.13.0
+djangorestframework==3.14.0
+djangorestframework-simplejwt[crypto]==5.2.2
+docker[ssh]==4.4.4 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+docker-compose==1.25.5 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+dockerpty==0.4.1
+docopt==0.6.2
+drf-yasg==1.21.4
+future==0.16.0
+gunicorn==20.1.0
+idna==3.4 ; python_version >= '3'
+inflection==0.5.1 ; python_version >= '3.5'
+itypes==1.2.0
+jinja2==3.1.2 ; python_version >= '3.7'
+jmespath==0.10.0 ; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+jsonschema==3.2.0
+kombu==5.2.4 ; python_version >= '3.7'
+markupsafe==2.1.1 ; python_version >= '3.7'
+packaging==21.3 ; python_version >= '3.6'
+paramiko==2.12.0
+pathspec==0.9.0
+prompt-toolkit==3.0.33 ; python_full_version >= '3.6.2'
+psycopg2-binary==2.9.5
+pycparser==2.21
+pyjwt==2.6.0 ; python_version >= '3.7'
+pynacl==1.5.0 ; python_version >= '3.6'
+pyparsing==3.0.9 ; python_full_version >= '3.6.8'
+pyrsistent==0.19.2 ; python_version >= '3.7'
+python-dateutil==2.8.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pytz==2022.6
+pyyaml==5.4.1
+redis==4.3.5
+requests==2.26.0
+ruamel.yaml==0.17.21 ; python_version >= '3'
+ruamel.yaml.clib==0.2.7 ; python_version < '3.11' and platform_python_implementation == 'CPython'
+semantic-version==2.8.5 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+setuptools==65.6.2 ; python_version >= '3.7'
+six==1.14.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+sqlparse==0.4.3 ; python_version >= '3.5'
+termcolor==1.1.0
+texttable==1.6.7
+uritemplate==4.1.1 ; python_version >= '3.6'
+urllib3==1.26.12 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5' and python_version < '4'
+vine==5.0.0 ; python_version >= '3.6'
+wcwidth==0.1.9
+websocket-client==0.59.0 ; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
