--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,11 +24,11 @@ services:
             - ALLOWED_HOSTS=*
             - HOST=http://localhost:8000
             - CSRF_TRUSTED_ORIGINS=http://127.0.0.1
-            - TMX_HOST=http://test.services.travelomatix.com/webservices/index.php/hotel_v3/service/Search
-            - TMTX_USERNAME=test273344
-            - TMTX_DOMAINKEY=TMX5262731660138834
-            - TMTX_SYSTEM=test
-            - TMTX_PASSWORD=test@273
+            - PAYMENT_TOKEN=https://api.stripe.com/v1/tokens
+            - PAYMENT_URL=https://api.stripe.com/v1/charges
+            - DEFAULT_CURRENCY=USD
+            # - PAYMENT_AUTH=c2tfbGl2ZV81MU0wQVlwSkxxTkUzRFdRNlNmVmFMeExvMWNIOFNpdUh0RDROTTYxc2o3YjZoQ1ZZRGU1WlBRd0p4WHJPbVg4dkx2T043T3pyQ25hY05id05yRDhMMVptNTAwOTZQb3h2U2Q6
+            - PAYMENT_AUTH=sk_test_51M0AYpJLqNE3DWQ6UJQ7S4bxtmYKZJyRwokDelUSvRiws5ZUjmzFouo1llhQUqjO15pYB7nzbvdY10jMnzEzcbgK00oymrIfjl
         ports:
             - '8000:8000'
         depends_on:
