ADD: wallet app

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
             - DEBUG=True
             - SECRET_KEY=vol-service-secret
             - TIME_ZONE=America/Mexico_City
-            - ALLOWED_HOSTS=*
+            - ALLOWED_HOSTS=*,127.0.0.1
             - HOST=http://localhost:8000
             - CSRF_TRUSTED_ORIGINS=http://127.0.0.1
             - PAYMENT_TOKEN=https://api.stripe.com/v1/tokens
