FIX: title in guests

--- a/catalogue/fixtures/agent_status.yaml
+++ b/catalogue/fixtures/agent_status.yaml
@@ -1,7 +1,7 @@
 - model: 'catalogue.Item'
   fields:
     id: '69e5e698-a900-4d14-a077-ba165f476a40'
-    catalogue_id: 'a4c7e30b-8b4e-4b2e-9674-a8137a930383'
+    catalogue_id: 'a4c7e30b-8b4e-4b2e-9674-a8137a930383' # Agent status
     slug: 'agent_validated'
     description: 'Validated'
     metadata:
@@ -9,7 +9,7 @@
 - model: 'catalogue.Item'
   fields:
     id: '850e92dd-a12d-4c58-94ef-782ec4c4edc7'
-    catalogue_id: 'a4c7e30b-8b4e-4b2e-9674-a8137a930383'
+    catalogue_id: 'a4c7e30b-8b4e-4b2e-9674-a8137a930383' # Agent status
     slug: 'agent_pending'
     description: 'Pending for validation'
     metadata:
