--- a/catalogue/fixtures/agent_subscriptions.yaml
+++ b/catalogue/fixtures/agent_subscriptions.yaml
@@ -6,3 +6,12 @@
     description: "Free subscription"
     metadata:
       - icon: "https://via.placeholder.com/150"
+
+- model: "catalogue.Item"
+  fields:
+    id: "6e652935-cd9f-4b66-846b-fc1da9315b98"
+    catalogue_id: "5d7b286e-cab3-4869-b420-119f9bd8b2e9" # Agent subscriptions
+    slug: "agent_subscription_expert"
+    description: "Expert subscription"
+    metadata:
+      - icon: "https://via.placeholder.com/150"
