--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 amqp==5.1.1 ; python_version >= '3.6'
 asgiref==3.5.2 ; python_version >= '3.7'
 async-timeout==4.0.2 ; python_version >= '3.6'
+backports.zoneinfo==0.2.1 ; python_version < '3.9'
 billiard==3.6.4.0
 celery==5.2.7
 certifi==2022.9.24 ; python_version >= '3.6'
@@ -13,7 +14,7 @@ click-plugins==1.1.1
 click-repl==0.2.0
 coreapi==2.3.3
 coreschema==0.0.4
-cryptography==38.0.3
+cryptography==38.0.4
 django==4.1.3
 django-cors-headers==3.13.0
 djangorestframework==3.14.0
@@ -32,15 +33,18 @@ psycopg2-binary==2.9.5
 pycparser==2.21
 pyjwt==2.6.0 ; python_version >= '3.7'
 pyparsing==3.0.9 ; python_full_version >= '3.6.8'
+python-http-client==3.3.7 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytz==2022.6
 pyyaml==6.0
 redis==4.3.5
 requests==2.28.1
 ruamel.yaml==0.17.21 ; python_version >= '3'
 ruamel.yaml.clib==0.2.7 ; python_version < '3.11' and platform_python_implementation == 'CPython'
-setuptools==65.6.2 ; python_version >= '3.7'
+sendgrid==6.9.7
+setuptools==65.6.3 ; python_version >= '3.7'
 six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlparse==0.4.3 ; python_version >= '3.5'
+starkbank-ecdsa==2.2.0
 uritemplate==4.1.1 ; python_version >= '3.6'
 urllib3==1.26.13 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 vine==5.0.0 ; python_version >= '3.6'
