--- a/external_api/fixtures/rakuten_destinations.yaml
+++ b/external_api/fixtures/rakuten_destinations.yaml
@@ -65,5 +65,26 @@
   fields:
     id: '06b4b9a9-5288-4b3a-8aa8-850df911c72b'
     provider: '0006ea0f-724a-4fee-a12f-c6f93300f8b9'
-    destination: '5553cd6c-71ad-11ed-8eed-6ef05e004391'
+    destination: '5553c5d8-71ad-11ed-8eed-6ef05e004391'
     external_id: 'SvBX' # Sapporo, Japan
+
+- model: 'external_api.ExternalDestination'
+  fields:
+    id: '2d54bb8d-1eda-4f23-82b2-1c299c2cee7e'
+    provider: '0006ea0f-724a-4fee-a12f-c6f93300f8b9'
+    destination: '5553cd6c-71ad-11ed-8eed-6ef05e004391'
+    external_id: 'reFn' # Tokyo, Japan
+
+- model: 'external_api.ExternalDestination'
+  fields:
+    id: 'c89e7fa0-cf74-4017-b7e4-323a5b9bc6ab'
+    provider: '0006ea0f-724a-4fee-a12f-c6f93300f8b9'
+    destination: '5554ef58-71ad-11ed-8eed-6ef05e004391'
+    external_id: 'cnxl' # Davao City, Philippines
+
+- model: 'external_api.ExternalDestination'
+  fields:
+    id: 'ad8107ad-022e-415d-8d45-8cb9cb7f8833'
+    provider: '0006ea0f-724a-4fee-a12f-c6f93300f8b9'
+    destination: '555905a2-71ad-11ed-8eed-6ef05e004391'
+    external_id: 'fail' # Davao City, Philippines
