Feature: parse data to Hotel type

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,16 +44,16 @@ services:
             retries: 2
         volumes:
             - vdb:/var/lib/postgresql/data
-    # vcache:
-    #     image: redis
-    #     container_name: vcache
-    #     expose:
-    #         - '6379'
-    #     ports:
-    #         - '6379:6379'
-    #     command: redis-server
-    #     volumes: 
-    #         - vcache:/data
+    vcache:
+        image: redis
+        container_name: vcache
+        expose:
+            - '6379'
+        ports:
+            - '6379:6379'
+        command: redis-server
+        volumes: 
+            - vcache:/data
 volumes:
     vdb:
-    # vcache:
+    vcache:
