--- a/catalogue/fixtures/test_cities.yaml
+++ b/catalogue/fixtures/test_cities.yaml
@@ -30,3 +30,11 @@
     parent: d01fcfe0-75af-11ed-ac1d-6ef05e004391
     slug: darwaz
   model: catalogue.Item
+- fields:
+    catalogue_id: c807abfe-71ac-11ed-a1eb-0242ac120002
+    description: New York,   New York
+    id: 02baed90-75b0-11ed-ac1d-6ef05e004391
+    metadata: ''
+    parent: ff862658-75af-11ed-ac1d-6ef05e004391
+    slug: new_york,___new_york
+  model: catalogue.Item
