--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,18 +14,18 @@ services:
             - '8000:8000'
         depends_on:
             - vdb
-            # - vcache
-    # volindo-worker:
-    #     container_name: volindo-worker
-    #     build: .
-    #     command: 'celery -A volindoapp worker -l INFO'
-    #     volumes:
-    #         - ./src/:/code
-    #     env_file:
-    #        - .env
-    #     depends_on:
-    #         - vdb
-    #         - vcache
+            - vcache
+    volindo-worker:
+        container_name: volindo-worker
+        build: .
+        command: 'celery -A volindoapp worker -l INFO'
+        volumes:
+            - .:/code
+        env_file:
+           - .env
+        depends_on:
+            - vdb
+            - vcache
     vdb:
         container_name: vdb
         image: postgres:14
@@ -49,8 +49,6 @@ services:
         container_name: vcache
         expose:
             - '6379'
-        ports:
-            - '6379:6379'
         command: redis-server
         volumes: 
             - vcache:/data
