--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ requests==2.28.1
 ruamel.yaml==0.17.21 ; python_version >= '3'
 ruamel.yaml.clib==0.2.7 ; python_version < '3.11' and platform_python_implementation == 'CPython'
 sendgrid==6.9.7
+sentry-sdk==1.11.1
 setuptools==65.6.3 ; python_version >= '3.7'
 six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlparse==0.4.3 ; python_version >= '3.5'
