ADD: pre booking functionality

--- a/catalogue/fixtures/destinations.yaml
+++ b/catalogue/fixtures/destinations.yaml
@@ -5,3 +5,11 @@
     external_id: '141497'
     search_field: 'victoria falls'
     display_name: "Victoria Falls - Zimbabwe"
+
+- model: 'catalogue.Destination'
+  fields:
+    id: '224d3796-70b6-4d36-942d-e3ce90f97ff9'
+    country: '87ddfd52-d402-4867-8e44-1e57b3a6f772'
+    external_id: '115936'
+    search_field: 'dubai'
+    display_name: "Dubai - United Arab Emirates"
