--- a/catalogue/fixtures/traveler_status.yaml
+++ b/catalogue/fixtures/traveler_status.yaml
@@ -17,4 +17,4 @@
     id: '564c239f-678b-4e5b-a502-969ecdfc23c9'
     catalogue_id: '1765c730-ba74-4768-aae1-2d17d0d38fa8'
     slug: 'travaler_family_friend'
-    description: 'Famili/Friend'
+    description: 'Family/Friend'
