--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,8 @@ services:
     volindo-worker:
         container_name: volindo-worker
         build: .
-        command: 'celery -A volindoapp worker -l INFO'
+        # command: 'celery -A volindoapp worker -l INFO'
+        command: watchmedo auto-restart --directory=./ --pattern=*.py --recursive -- celery --app volindoapp worker --concurrency=1 --loglevel=INFO
         volumes:
             - .:/code
         env_file:
