--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 -i https://pypi.org/simple
 amqp==5.1.1 ; python_version >= '3.6'
-asgiref==3.5.2 ; python_version >= '3.7'
+asgiref==3.6.0 ; python_version >= '3.7'
 async-timeout==4.0.2 ; python_version >= '3.6'
 billiard==3.6.4.0
 celery==5.2.7
@@ -32,14 +32,14 @@ psycopg2-binary==2.9.5
 pycparser==2.21
 pyjwt==2.6.0 ; python_version >= '3.7'
 python-http-client==3.3.7 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pytz==2022.6
+pytz==2022.7
 pyyaml==6.0
 redis==4.4.0
 requests==2.28.1
 ruamel.yaml==0.17.21 ; python_version >= '3'
 ruamel.yaml.clib==0.2.7 ; python_version < '3.11' and platform_python_implementation == 'CPython'
 sendgrid==6.9.7
-sentry-sdk==1.11.1
+sentry-sdk==1.12.1
 setuptools==65.6.3 ; python_version >= '3.7'
 six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sqlparse==0.4.3 ; python_version >= '3.5'
@@ -48,4 +48,5 @@ unidecode==1.3.6
 uritemplate==4.1.1 ; python_version >= '3.6'
 urllib3==1.26.13 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 vine==5.0.0 ; python_version >= '3.6'
+watchdog==2.2.0
 wcwidth==0.2.5
