UPDATE: flight flow

--- a/hotel/fixtures/hotels.yaml
+++ b/hotel/fixtures/hotels.yaml
@@ -10,3 +10,42 @@
     longitude: '55.322150'
     address: 'Al Riqqa Street, P.O.Box 49185Dubai, Dubai, 115283, United Arab Emirates'
     description: 'Located in the centre of Deira, Signature INN is only 5 km from Dubai International Airport. It has an outdoor pool and features a rooftop restaurant with panoramic city views.  Rooms have parquet floors and are decorated in neutral colours. They include a seating area and LCD TV and satellite channels. Each room comes equipped with air conditioning and a private bathroom with a hairdryer.  In the morning the hotel serves breakfast with freshly-brewed coffee. There is a restaurant that specialises in Indian cuisine and a pub with billiards. At night guests can dance to music at the nightclub.  The tour desk provides information on local attractions and assists with car hire.  The hotel is 550 metres from the Al Rigga Metro Station and is a 20-minute drive from the World Trade Centre. Free private parking is possible on site.&nbsp;<br/><b>Disclaimer notification: Amenities are subject to availability and may be chargeable as per the hotel policy.</b>'
+
+- model: 'hotel.Hotel'
+  fields:
+    id: 'd6fe720f-6aa1-4a77-8df8-b88c98eb272f'
+    destination: '224d3796-70b6-4d36-942d-e3ce90f97ff9'
+    provider: 'a33ba54c-34f9-4f1a-9d87-0d85a4cfdeba'
+    external_id: '1013894'
+    hotel_name: 'Fairmont The Palm'
+    stars: '5'
+    latitude: '25.11045400'
+    longitude: '55.14126100'
+    address: 'PO Box 72413,Palm Jumeirah,Dubai, Palm JumeirahDubai, Dubai, P.OBox72413, United Arab Emirates'
+    description: '<p>HeadLine : Near Aquaventure</p><p>Location : Located in Dubai (Palm Jumeirah), Fairmont The Palm is within a 15-minute drive of Emirates Golf Club and Mall of the Emirates.  This 5-star hotel is 4.7 mi (7.5 km) from Aquaventure and 7.2 mi (11.6 km) from Ski Dubai.</p><p>Rooms : Make yourself at home in one of the 381 guestrooms featuring minibars and LED televisions. Rooms have private balconies. Complimentary wireless Internet access keeps you connected, and satellite programming is available for your entertainment. Private bathrooms with separate bathtubs and showers feature deep soaking bathtubs and rainfall showerheads.</p><p>Dining : Enjoy international cuisine at Mashrabiya Lounge, one of the hotel s 10 restaurants, or stay in and take advantage of the 24-hour room service. Snacks are also available at the coffee shop/caf?. Wrap up your day with a drink at the bar/lounge. Buffet breakfasts are available daily from 6:30 AM to 11 AM for a fee.</p><p>Renovations : Due to COVID-19, this property’s food and beverage options may be limited.</p><p>CheckIn Instructions : Extra-person charges may apply and vary depending on property policy Government-issued photo identification and a credit card, debit card, or cash deposit may be required at check-in for incidental charges Special requests are subject to availability upon check-in and may incur additional charges; special requests cannot be guaranteed This property accepts credit cards and cash Safety features at this property include a smoke detector Please note that cultural norms and guest policies may differ by country and by property; the policies listed are provided by the property Breakfast Included rate plans are valid for 2 adults only. Surcharges apply for children.</p><p>Special Instructions : Front desk staff will greet guests on arrival. For more details, please contact the property using the information on the booking confirmation.  Beach enhancements are underway along the trunk of Palm Island, adjacent to this property. During this time, guests may experience intermittent noise disturbance and some views may be obstructed. The hotel continues to operate as normal, offering beach access, 4 swimming pools, and landscaped gardens. Due to COVID-19, this property s food and beverage options may be limited pursuant to local regulations.</p>&nbsp;<br/><b>Disclaimer notification: Amenities are subject to availability and may be chargeable as per the hotel policy.</b>'
+
+- model: 'hotel.Hotel'
+  fields:
+    id: 'd9f957e0-607a-4c18-9b19-dbdd13eab444'
+    destination: '224d3796-70b6-4d36-942d-e3ce90f97ff9'
+    provider: 'a33ba54c-34f9-4f1a-9d87-0d85a4cfdeba'
+    external_id: '1023517'
+    hotel_name: 'Marriott Executive Apartments Al Jaddaf'
+    stars: '4'
+    latitude: '25.21199800'
+    longitude: '55.31560400'
+    address: 'Oud Metha Road,Al Jaddaf Area,Dubai 122273, Al Jaddaf AreaDubai 122273, Dubai, 122273, United Arab Emirates'
+    description: '<p>HeadLine : In Dubai (Bur Dubai)</p><p>Location : With a stay at Marriott Executive Apartments Dubai, Al Jaddaf, you ll be centrally located in Dubai, within a 5-minute drive of Dubai Creek and Dubai Mall.  This aparthotel is 4 mi (6.4 km) from BurJuman Mall and 4.1 mi (6.6 km) from Dubai Fountain.</p><p>Rooms : Make yourself at home in one of the 128 guestrooms, featuring kitchens with refrigerators and stovetops. Your pillowtop bed comes with premium bedding. Wired and wireless Internet access is complimentary, and LCD televisions with cable programming provide entertainment. Conveniences include safes and desks, and housekeeping is provided on a limited basis.</p><p>Dining : Enjoy international cuisine at The Lobby Lounge, one of the aparthotel s many dining establishments, which include 7 restaurants and a coffee shop/café. Unwind at the end of the day with a drink at the bar/lounge or the poolside bar. Buffet breakfasts are available daily for a fee.</p><p>CheckIn Instructions : Extra-person charges may apply and vary depending on property policy Government-issued photo identification and a credit card, debit card, or cash deposit may be required at check-in for incidental charges Special requests are subject to availability upon check-in and may incur additional charges; special requests cannot be guaranteed This property accepts credit cards; cash is not accepted</p><p>Special Instructions : Front desk staff will greet guests on arrival.</p>&nbsp;<br/><b>Disclaimer notification: Amenities are subject to availability and may be chargeable as per the hotel policy.</b>'
+
+- model: 'hotel.Hotel'
+  fields:
+    id: '545ee5ce-ec56-4784-a339-dfeb460beadf'
+    destination: '224d3796-70b6-4d36-942d-e3ce90f97ff9'
+    provider: 'a33ba54c-34f9-4f1a-9d87-0d85a4cfdeba'
+    external_id: '1107835'
+    hotel_name: 'Landmark Summit Hotel'
+    stars: '4'
+    latitude: '25.26438200'
+    longitude: '55.31964100'
+    address: '34B Street,PO Box 64264,Dubai Behind Commercial Bank Building, Deira, DubaiDeira, Dubai, 64264, United Arab Emirates'
+    description: '<p>HeadLine : Near Al Ghurair Centre</p><p>Location : With a stay at Landmark Summit Hotel in Dubai (Deira), you ll be within a 5-minute drive of Al Ghurair Centre and Naif Souq.  This 4-star hotel is 2.3 mi (3.7 km) from City Centre Deira and 2.4 mi (3.9 km) from Gold Souk.</p><p>Rooms : Make yourself at home in one of the 114 air-conditioned rooms featuring minibars. Complimentary wireless Internet access keeps you connected, and satellite programming is available for your entertainment. Private bathrooms with showers feature complimentary toiletries and hair dryers. Conveniences include safes and separate sitting areas, and housekeeping is provided daily.</p><p>Dining : Enjoy a meal at the restaurant, or stay in and take advantage of the hotel s 24-hour room service. Quench your thirst with your favorite drink at the bar/lounge.</p><p>CheckIn Instructions : Extra-person charges may apply and vary depending on property policy Government-issued photo identification and a cash deposit may be required at check-in for incidental charges Special requests are subject to availability upon check-in and may incur additional charges; special requests cannot be guaranteed This property accepts credit cards, debit cards, and cash Safety features at this property include a fire extinguisher and a smoke detector</p><p>Special Instructions : This property doesn t offer after-hours check-in. Front desk staff will greet guests on arrival.</p>&nbsp;<br/><b>Disclaimer notification: Amenities are subject to availability and may be chargeable as per the hotel policy.</b>'
