--- a/user/fixtures/users.yaml
+++ b/user/fixtures/users.yaml
@@ -1,7 +1,8 @@
 - model: 'user.User'
   fields:
     id: '1d9646fd-73c1-44ad-919b-6b8730ee2855'
-    full_name: 'Eren Jaeger'
+    full_name: 'Jhon Doe'
     email: 'mail@mail.com'
+    external_id: '87a69f31-c564-4079-be07-759e58c952dd'
     created_at: '2022-05-03'
     updated_at: '2022-05-03'
